--- a/test_gpu.ipynb
+++ b/test_gpu.ipynb
@@ -2,16 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n",
+      "\n",
+      "NVIDIA GeForce RTX 3060\n",
+      "Memory Usage:\n",
+      "Allocated: 0.0 GB\n",
+      "Cached:    0.0 GB\n"
+     ]
+    }
+   ],
    "source": [
     "# setting device on GPU if available, else CPU\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -24,45 +39,37 @@
     "    print('Memory Usage:')\n",
     "    print('Allocated:', round(torch.cuda.memory_allocated(0)/1024**3,1), 'GB')\n",
     "    print('Cached:   ', round(torch.cuda.memory_reserved(0)/1024**3,1), 'GB')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Using device: cuda\n",
-      "\n",
-      "NVIDIA GeForce RTX 3060\n",
-      "Memory Usage:\n",
-      "Allocated: 0.0 GB\n",
-      "Cached:    0.0 GB\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.6 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.6",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
-  },
-  "interpreter": {
-   "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
